After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 662618 - [gst-plugins-bad]compiler warnings due to printf format mismatch
[gst-plugins-bad]compiler warnings due to printf format mismatch
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
0.11.x
Other Mac OS
: Normal normal
: 0.11.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-10-24 15:34 UTC by Matej Knopp
Modified: 2012-02-20 15:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fixes log formatting erros (7.19 KB, application/octet-stream)
2011-10-24 15:34 UTC, Matej Knopp
  Details
Fix build for OS X (12.89 KB, patch)
2011-11-21 21:46 UTC, Matej Knopp
committed Details | Review
fix build for OS X (1.95 KB, patch)
2011-11-27 19:25 UTC, Matej Knopp
committed Details | Review
Another one (2.02 KB, patch)
2012-01-26 12:17 UTC, Matej Knopp
none Details | Review

Description Matej Knopp 2011-10-24 15:34:05 UTC
Created attachment 199840 [details]
fixes log formatting erros

OSX 64bit; Some plugins error out about log formatting specifiers (patch attached).
Also the gst-libs seem to be built but not yet been ported to 0.11
Comment 1 Matej Knopp 2011-11-21 21:46:16 UTC
Created attachment 201879 [details] [review]
Fix build for OS X
Comment 2 Tim-Philipp Müller 2011-11-23 23:45:51 UTC
commit 026af880b586ceef14f594cce8ea6c6b255b60fc
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Wed Nov 23 23:42:41 2011 +0000

    faac, rtmp: more printf format fixes in debug messages
    
    https://bugzilla.gnome.org/show_bug.cgi?id=662618

commit 9d0bdcf6d75180276c7b6cb85127bd6dec460174
Author: Matej Knopp <matej.knopp@gmail.com>
Date:   Mon Nov 21 22:45:15 2011 +0100

    Fix printf format compiler warnings on OS X / 64 bit
    
    https://bugzilla.gnome.org/show_bug.cgi?id=662618
Comment 3 Matej Knopp 2011-11-27 19:25:51 UTC
Created attachment 202250 [details] [review]
fix build for OS X
Comment 4 Matej Knopp 2012-01-26 12:17:53 UTC
Created attachment 206171 [details] [review]
Another one
Comment 5 Wim Taymans 2012-02-20 15:22:27 UTC
commit e4e0d3ce02c5e9a6c79d4826fc52e743e0221fba
Author: Matej Knopp <matej.knopp@gmail.com>
Date:   Thu Jan 26 06:58:46 2012 -0500

    Fix compiler warnings