Fix printf format compiler warnings on OS X / 64 bit

https://bugzilla.gnome.org/show_bug.cgi?id=662618